--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap');
+
 .cabecalho{
     width: 100%;
+    text-align: center;
+    background-color: pink;
 }
 
 .cabecalho__titulo{
     color: #00f;
-    
+    font-family: "Red Hat Display", sans-serif;
+    font-weight: 900;
 }
