--- a/style.css
+++ b/style.css
@@ -9,9 +9,10 @@
 .cabecalho__titulo{
     color: #00f;
     font-family: "Red Hat Display", sans-serif;
-    font-weight: 900;
+    font-weight: 700;
 }
 
 ul{
     list-style: none;
+    font-family: "Red Hat Display", sans-serif;
 }
